# hope

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  vercel.json
alembic/: env.py
alembic/versions/: 001_initial_schema.py
hope_mobile/: README.md  pubspec.yaml
hope_mobile/android/app/: build.gradle.kts
hope_mobile/ios/Runner/: Info.plist
hope_mobile/ios/Runner.xcodeproj/: project.pbxproj
hope_mobile/lib/: main.dart
hope_mobile/lib/core/di/: service_locator.dart
hope_mobile/lib/core/theme/: app_theme.dart
hope_mobile/lib/data/services/: websocket_service.dart
hope_mobile/lib/panic/: panic_state.dart
hope_mobile/lib/panic/bloc/: panic_bloc.dart
hope_mobile/lib/panic/ux/: panic_analytics.dart  panic_entry_router.dart  panic_state_classifier.dart
hope_mobile/lib/presentation/screens/: crisis_flow_screen.dart  history_screen.dart  hold_reassurance_screen.dart  home_screen.dart  panic_active_screen.dart  resources_screen.dart  settings_screen.dart
hope_mobile/lib/presentation/widgets/: adaptive_breathing_exercise.dart  adaptive_grounding_exercise.dart  breathing_exercise.dart  grounding_exercise.dart  intensity_slider.dart
hope_mobile/linux/: CMakeLists.txt
hope_mobile/linux/runner/: my_application.cc
hope_mobile/macos/Runner.xcodeproj/: project.pbxproj
hope_mobile/macos/Runner/Configs/: AppInfo.xcconfig
hope_mobile/test/: offline_fallback_test.dart  panic_entry_router_test.dart  panic_state_classifier_test.dart  widget_test.dart
hope_mobile/web/: index.html
hope_mobile/windows/: CMakeLists.txt
hope_mobile/windows/runner/: Runner.rc  main.cpp
mobile/: .flutter-plugins-dependencies  pubspec.yaml
mobile/.dart_tool/: package_config.json  package_graph.json
mobile/.dart_tool/extension_discovery/: vs_code.json
src/hope/: __init__.py  main.py
src/hope/api/middleware/: error_handler.py  rate_limiter.py
src/hope/api/routes/: health.py  panic_session.py
src/hope/api/v1/: router.py
src/hope/config/: __init__.py  logging_config.py  settings.py
src/hope/domain/: __init__.py
src/hope/domain/enums/: __init__.py  panic_severity.py
src/hope/domain/models/: __init__.py  clinical_output.py  consent.py  emotional_context.py  panic_event.py  risk_models.py  session.py  session_metrics.py  user.py
src/hope/infrastructure/: __init__.py
src/hope/services/: __init__.py
src/hope/services/prompt/: __init__.py  (+2 more)
tests/: conftest.py
tests/integration/: test_panic_flow.py
tests/load/: locustfile.py
tests/unit/: test_gemini_activation_gate.py  test_stability_gate.py
tests/unit/services/: __init__.py  test_clinical_pipeline.py  test_safety_pipeline.py  test_safety_validator.py  test_text_analyzer.py
(+54 files in other folders)
